gallery/tests/snapshots/snapshots__actions.snap
---
source: gallery/tests/snapshots.rs
expression: html
---
<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Actions — stucco gallery</title><script>try {
  const t = localStorage.getItem("stucco-theme");
  if (t === "light" || t === "dark") document.documentElement.dataset.theme = t;
} catch (_) {}
</script><link rel="stylesheet" href="/_stucco/stucco.HASH.css"></head><body><a class="st-skip-link" href="#main">Skip to main content</a><main id="main"><div class="st-container g-page" data-size="xl"><div class="st-stack" data-space="10"><div class="st-stack" data-space="3"><a class="st-link" href="index.html">← Gallery</a><h1 class="st-heading" data-size="3xl">Actions</h1><p class="st-text" data-size="lg" data-tone="muted">Buttons default to type="button"; loading buttons stay focusable and announce busy.</p></div><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Variants</h2><div class="st-cluster" data-space="3"><button class="st-button" type="button" data-variant="primary" data-size="md">Primary</button><button class="st-button" type="button" data-variant="secondary" data-size="md">Secondary</button><button class="st-button" type="button" data-variant="ghost" data-size="md">Ghost</button><button class="st-button" type="button" data-variant="danger" data-size="md">Danger</button></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Sizes</h2><div class="st-cluster" data-space="3"><button class="st-button" type="button" data-variant="secondary" data-size="sm">Small</button><button class="st-button" type="button" data-variant="secondary" data-size="md">Medium</button><button class="st-button" type="button" data-variant="secondary" data-size="lg">Large</button></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Icons and states</h2><div class="st-cluster" data-space="3"><button class="st-button" type="button" data-variant="primary" data-size="md"><svg class="st-icon" viewBox="0 0 24 24" width="1em" height="1em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false"><path d="M5 12h14" /><path d="M12 5v14" /></svg>Add item</button><button class="st-button" type="button" data-variant="secondary" data-size="md"><svg class="st-icon" viewBox="0 0 24 24" width="1em" height="1em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false"><path d="M12 15V3" /><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" /><path d="m7 10 5 5 5-5" /></svg>Download</button><button class="st-button" type="button" data-variant="secondary" data-size="md" aria-busy="true" aria-disabled="true">Saving</button><button class="st-button" type="button" data-variant="secondary" data-size="md" disabled>Disabled</button></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">ButtonLink</h2><div class="st-cluster" data-space="3"><a class="st-button" href="index.html" data-variant="primary" data-size="md">Get started</a><a class="st-button" href="palette.html" data-variant="secondary" data-size="md"><svg class="st-icon" viewBox="0 0 24 24" width="1em" height="1em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false"><path d="M5 12h14" /><path d="m12 5 7 7-7 7" /></svg>Palettes</a></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">IconButton</h2><div class="st-cluster" data-space="3"><button class="st-button" type="button" data-variant="ghost" data-size="md" data-icon-only aria-label="Search"><svg class="st-icon" viewBox="0 0 24 24" width="1em" height="1em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false"><path d="m21 21-4.34-4.34" /><circle cx="11" cy="11" r="8" /></svg></button><button class="st-button" type="button" data-variant="secondary" data-size="md" data-icon-only aria-label="Settings"><svg class="st-icon" viewBox="0 0 24 24" width="1em" height="1em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false"><path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915" /><circle cx="12" cy="12" r="3" /></svg></button><button class="st-button" type="button" data-variant="danger" data-size="md" data-icon-only aria-label="Delete"><svg class="st-icon" viewBox="0 0 24 24" width="1em" height="1em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false"><path d="M10 11v6" /><path d="M14 11v6" /><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6" /><path d="M3 6h18" /><path d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2" /></svg></button></div></div></section></div></div></main></body></html>
