gallery/tests/snapshots/snapshots__app.snap
---
source: gallery/tests/snapshots.rs
expression: "app.replace(bundle.stylesheet_url(), \"/_stucco/stucco.HASH.css\")"
---
<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Application shell</title><script>try {
  const t = localStorage.getItem("stucco-theme");
  if (t === "light" || t === "dark") document.documentElement.dataset.theme = t;
} catch (_) {}
</script><link rel="stylesheet" href="/_stucco/stucco.HASH.css"></head><body><div class="st-app-shell"><a class="st-skip-link" href="#main">Skip to main content</a><header class="st-app-header"><div class="st-page-header"><h1 class="st-heading" data-size="3xl">Application shell</h1>A server-rendered workspace</div></header><div class="st-app-body"><aside class="st-app-sidebar"><details open><summary>Navigation</summary><nav aria-label="Gallery"><a href="index.html">Gallery</a><a href="collections.html">Collections</a></nav></details></aside><main id="main" class="st-app-main"><section class="st-panel" aria-labelledby="panel-1"><div class="st-panel-header"><h2 id="panel-1" class="st-heading" data-size="2xl">Workspace</h2></div><div class="st-page-header"><h3 class="st-heading" data-size="xl">Recent activity</h3>No recent changes.</div></section></main></div><footer class="st-footer">Stucco gallery</footer></div></body></html>
