gallery/tests/snapshots/snapshots__collections.snap
---
source: gallery/tests/snapshots.rs
expression: html
---
<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Data and collections — stucco gallery</title><script>try {
  const t = localStorage.getItem("stucco-theme");
  if (t === "light" || t === "dark") document.documentElement.dataset.theme = t;
} catch (_) {}
</script><link rel="stylesheet" href="/_stucco/stucco.HASH.css"></head><body><a class="st-skip-link" href="#main">Skip to main content</a><main id="main"><div class="st-container g-page" data-size="xl"><div class="st-stack" data-space="10"><div class="st-stack" data-space="3"><a class="st-link" href="index.html">← Gallery</a><h1 class="st-heading" data-size="3xl">Data and collections</h1><p class="st-text" data-size="lg" data-tone="muted">Native tables and GET navigation, with no behavior module.</p></div><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Tables and panels</h2><section class="st-panel" aria-labelledby="panel-1"><div class="st-panel-header"><h2 id="panel-1" class="st-heading" data-size="2xl">Customer overview</h2>A labelled region</div><div class="st-card">Current customers<div class="st-table-scroll" role="region" aria-label="Customer summary" tabindex="0"><table class="st-table"><caption>Customer summary</caption><thead><tr><th scope="col">Name</th><th scope="col">Status</th></tr></thead><tbody><tr><th scope="row">Ada</th><td>paid</td></tr></tbody></table></div><p class="st-result-count">Showing 1–1 of 1</p></div></section></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Cursor collection</h2><div class="st-data-table"><div class="st-collection-toolbar"><form class="st-filter-bar" method="get" action="collections.html"><div class="st-collection-control"><label for="search-1">Search customers</label><input id="search-1" type="search" name="q" value=""></div><div class="st-collection-control"><label for="filter-1">Name</label><input id="filter-1" name="f.name" value=""></div><div class="st-collection-control"><label for="sort-1">Sort by</label><select id="sort-1" name="sort"><option value="">Default</option><option value="name">Name</option></select><label for="direction-1">Direction</label><select id="direction-1" name="dir"><option value="asc" selected>Ascending</option><option value="desc">Descending</option></select></div><div class="st-collection-control"><label for="per-1">Rows per page</label><select id="per-1" name="per"><option value="10">10</option><option value="25" selected>25</option><option value="50">50</option><option value="100">100</option></select></div><button type="submit">Apply filters</button><a href="collections.html?per=25">Reset filters</a></form><div role="status" aria-live="polite" aria-atomic="true"><p class="st-result-count">Showing 2 results</p></div></div><div class="st-table-scroll" role="region" aria-label="Customers" tabindex="0"><table class="st-table"><caption>Customers</caption><thead><tr><th scope="col"><a href="collections.html?sort=name&amp;dir=asc&amp;per=25">Name</a></th></tr></thead><tbody><tr><td>Ada</td></tr><tr><td>Grace</td></tr></tbody></table></div><nav class="st-pagination" aria-label="Customers pagination"><a href="collections.html?per=25&amp;after=next">Next</a></nav></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Empty and unsupported operations</h2><div class="st-data-table"><div class="st-collection-toolbar"><form class="st-filter-bar" method="get" action=""><div class="st-collection-control"><label for="per-2">Rows per page</label><select id="per-2" name="per"><option value="10">10</option><option value="25" selected>25</option><option value="50">50</option><option value="100">100</option></select></div><button type="submit">Apply filters</button><a href="?per=25">Reset filters</a></form><div role="status" aria-live="polite" aria-atomic="true"><p class="st-result-count">No results</p></div></div><div class="st-empty-state"><h2 class="st-heading" data-size="2xl">No results</h2>Try adjusting your search or filters.<a href="?per=25">Reset filters</a></div></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Numbered navigation</h2><nav class="st-pagination" aria-label="Pagination"><a href="collections.html?mode=pages&amp;per=25" aria-label="Page 1">1</a><a href="collections.html?mode=pages&amp;per=25&amp;page=2" aria-label="Page 2">2</a><a href="collections.html?mode=pages&amp;per=25&amp;page=3" aria-label="Page 3" aria-current="page">3</a><a href="collections.html?mode=pages&amp;per=25&amp;page=4" aria-label="Page 4">4</a><a href="collections.html?mode=pages&amp;per=25&amp;page=5" aria-label="Page 5">5</a><span aria-hidden="true">…</span><a href="collections.html?mode=pages&amp;per=25&amp;page=10" aria-label="Page 10">10</a></nav></div></section></div></div></main></body></html>
