gallery/tests/snapshots/snapshots__forms.snap
---
source: gallery/tests/snapshots.rs
expression: html
---
<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="theme-color" media="(prefers-color-scheme: light)" content="oklch(99.00% 0.0012 250.00)"><meta name="theme-color" media="(prefers-color-scheme: dark)" content="oklch(16.00% 0.0012 250.00)"><title>Forms — stucco gallery</title><script>try {
  const t = localStorage.getItem("stucco-theme");
  if (t === "light" || t === "dark") document.documentElement.dataset.theme = t;
} catch (_) {}
</script><link rel="stylesheet" href="/_stucco/stucco.HASH.css"></head><body><a class="st-skip-link" href="#main">Skip to main content</a><main id="main"><div class="st-container g-page" data-size="xl"><div class="st-stack" data-space="10"><div class="st-stack" data-space="3"><a class="st-link" href="index.html">← Gallery</a><h1 class="st-heading" data-size="3xl">Forms</h1><p class="st-text" data-size="lg" data-tone="muted">Fields wire labels, hints and errors automatically and redisplay submitted values — never passwords.</p></div><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">A submitted form with errors</h2><form class="st-form" method="post" action="#"><input type="hidden" name="_csrf" value="demo-token"><div class="st-stack" data-space="6"><div class="st-error-summary" role="group" aria-labelledby="errors-1" tabindex="-1"><h2 id="errors-1" class="st-error-summary-title">There is a problem</h2><ul class="st-error-summary-list"><li><a href="#email">Enter a valid email address.</a></li><li>Choose a billing period.</li></ul></div><div class="st-grid" data-min="xs" data-space="4"><div class="st-field"><label class="st-label" for="field-1">Name<span class="st-required" aria-hidden="true">*</span></label><input id="field-1" class="st-input" type="text" name="name" value="Ada Lovelace" autocomplete="name" required></div><div class="st-field"><label class="st-label" for="email">Email</label><input id="email" class="st-input" type="email" name="email" value="ada@example" autocomplete="email" aria-describedby="email-hint email-error" aria-invalid="true"><p id="email-hint" class="st-field-hint">We only use it for receipts.</p><p id="email-error" class="st-field-error"><span class="st-sr-only">Error: </span>Enter a valid email address.</p></div><div class="st-field"><label class="st-label" for="field-2">Password</label><input id="field-2" class="st-input" type="password" name="password" autocomplete="new-password" aria-describedby="field-2-hint"><p id="field-2-hint" class="st-field-hint">At least 12 characters.</p></div><div class="st-field"><label class="st-label" for="field-3">Website</label><div class="st-input-group"><span id="field-3-prefix" class="st-input-adornment">https://</span><input id="field-3" class="st-input" type="url" name="website" aria-describedby="field-3-prefix"></div></div><div class="st-field"><label class="st-label" for="field-4">Quantity</label><div class="st-input-group"><input id="field-4" class="st-input" type="number" name="quantity" min="1" aria-describedby="field-4-suffix"><span id="field-4-suffix" class="st-input-adornment">seats</span></div></div><div class="st-field"><label class="st-label" for="field-5">Plan</label><select id="field-5" class="st-select" name="plan"><option value="" disabled>Choose a plan…</option><option value="solo">Solo</option><option value="team" selected>Team</option><option value="enterprise">Enterprise</option></select></div></div><div class="st-field"><label class="st-label" for="field-6">Bio<span class="st-optional"> (optional)</span></label><textarea id="field-6" class="st-textarea" name="bio" rows="3"></textarea></div><fieldset class="st-fieldset"><legend class="st-legend">Preferences</legend><div class="st-stack" data-space="4"><fieldset class="st-radio-group" role="radiogroup" aria-describedby="radios-1-error" aria-invalid="true"><legend class="st-legend">Billing</legend><label class="st-radio"><input type="radio" name="billing" value="monthly">Monthly</label><label class="st-radio"><input type="radio" name="billing" value="yearly">Yearly</label><p id="radios-1-error" class="st-field-error"><span class="st-sr-only">Error: </span>Choose a billing period.</p></fieldset><label class="st-checkbox"><input type="checkbox" name="terms" value="on" checked>I agree to the terms</label></div></fieldset><div class="st-form-actions"><button class="st-button" type="submit" data-variant="primary" data-size="md">Create account</button><button class="st-button" type="reset" data-variant="secondary" data-size="md">Reset</button><a class="st-button" href="index.html" data-variant="ghost" data-size="md">Cancel</a></div></div></form></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Read-only and disabled fields</h2><form class="st-form" method="post" action="#"><div class="st-grid" data-min="xs" data-space="4"><div class="st-field"><label class="st-label" for="field-7">Account ID</label><input id="field-7" class="st-input" type="text" name="account" value="acct_8f2c" aria-describedby="field-7-hint" readonly><p id="field-7-hint" class="st-field-hint">Read-only: submitted, but not editable.</p></div><div class="st-field"><label class="st-label" for="field-8">Region</label><select id="field-8" class="st-select" name="region" aria-describedby="field-8-hint" disabled><option value="eu" selected>Europe</option></select><p id="field-8-hint" class="st-field-hint">Disabled: neither editable nor submitted.</p></div><div class="st-field"><label class="st-label" for="field-9">Archived note</label><textarea id="field-9" class="st-textarea" name="archived" rows="2" readonly>Kept for the record.</textarea></div><div class="st-field"><label class="st-label" for="field-10">Coupon<span class="st-optional"> (optional)</span></label><input id="field-10" class="st-input" type="text" name="coupon" disabled></div></div></form></div></section></div></div></main></body></html>
