gallery/tests/snapshots/snapshots__layout.snap
---
source: gallery/tests/snapshots.rs
expression: html
---
<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Layout — stucco gallery</title><script>try {
  const t = localStorage.getItem("stucco-theme");
  if (t === "light" || t === "dark") document.documentElement.dataset.theme = t;
} catch (_) {}
</script><link rel="stylesheet" href="/_stucco/stucco.HASH.css"></head><body><a class="st-skip-link" href="#main">Skip to main content</a><main id="main"><div class="st-container g-page" data-size="xl"><div class="st-stack" data-space="10"><div class="st-stack" data-space="3"><a class="st-link" href="index.html">← Gallery</a><h1 class="st-heading" data-size="3xl">Layout</h1><p class="st-text" data-size="lg" data-tone="muted">Composable primitives that are responsive on their own, with no inline styles.</p></div><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Stack</h2><div class="st-stack" data-space="3"><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">First</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Second</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Third</span></div></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Cluster</h2><div class="st-cluster" data-space="3" data-justify="start"><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Rust</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">HTML</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">CSS</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Accessibility</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Themes</span></div></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Grid</h2><div class="st-grid" data-min="xs" data-space="3"><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">One</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Two</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Three</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Four</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Five</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Six</span></div></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Sidebar</h2><div class="st-sidebar" data-side="left" data-side-width="xs" data-space="4"><div class="st-sidebar-side"><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Side panel</span></div></div><div class="st-sidebar-main"><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Main content stretches to fill the rest</span></div></div></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Switcher</h2><div class="st-switcher" data-threshold="md" data-space="4"><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Left</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Middle</span></div><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Right</span></div></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Center</h2><div class="st-center" data-max="sm"><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Centred within 30rem</span></div></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Container</h2><p class="st-text" data-size="md" data-tone="muted">This page sits in a Container: centred, with gutters that grow with the viewport.</p></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Separator</h2><div class="st-stack" data-space="4"><p class="st-text" data-size="md">Above</p><hr class="st-separator"><p class="st-text" data-size="md">Below</p></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Surface and ThemeScope</h2><div class="st-cluster" data-space="4"><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Raised surface</span></div><div class="st-theme-scope" data-theme="dark"><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Forced dark scheme</span></div></div><div class="st-theme-scope" data-theme="light" data-st-theme="iris"><div class="st-surface" data-level="raised" data-padding="3" data-border><span class="st-text" data-size="md">Iris theme, light</span></div></div></div></div></section></div></div></main></body></html>
