gallery/tests/snapshots/snapshots__overlays.snap
---
source: gallery/tests/snapshots.rs
expression: html
---
<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="theme-color" media="(prefers-color-scheme: light)" content="oklch(99.00% 0.0012 250.00)"><meta name="theme-color" media="(prefers-color-scheme: dark)" content="oklch(16.00% 0.0012 250.00)"><title>Overlays — stucco gallery</title><script>try {
  const t = localStorage.getItem("stucco-theme");
  if (t === "light" || t === "dark") document.documentElement.dataset.theme = t;
} catch (_) {}
</script><link rel="stylesheet" href="/_stucco/stucco.HASH.css"><script type="module" src="/_stucco/stucco-runtime.af7b0610ee.js"></script><script type="module" src="/_stucco/overlay.adc322e20a.js"></script></head><body><a class="st-skip-link" href="#main">Skip to main content</a><main id="main"><div class="st-container g-page" data-size="xl"><div class="st-stack" data-space="10"><div class="st-stack" data-space="3"><a class="st-link" href="index.html">← Gallery</a><h1 class="st-heading" data-size="3xl">Overlays</h1><p class="st-text" data-size="lg" data-tone="muted">Dialogs, menus, tooltips and toasts, built on native HTML and enhanced by one small script.</p></div><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Dialog</h2><div class="st-stack" data-space="4"><p class="st-text" data-size="md">A native modal dialog: focus moves in and back, Escape and a click outside close it.</p><div class="st-cluster" data-space="3"><button class="st-button" type="button" data-variant="danger" data-size="md" commandfor="delete-order" command="show-modal">Delete order</button><a class="st-button" href="#delete-order" data-variant="secondary" data-size="md" data-st-opens="delete-order">Delete (link opener)</a></div><dialog id="delete-order" class="st-dialog" aria-labelledby="delete-order-title" closedby="any"><div class="st-dialog-header"><h2 id="delete-order-title" class="st-heading" data-size="lg">Delete order 1042?</h2><button class="st-dialog-close" type="button" commandfor="delete-order" command="close" aria-label="Close"><span aria-hidden="true">×</span></button></div><div class="st-dialog-body"><p class="st-text" data-size="md">The order and its history are removed. This can't be undone.</p></div><div class="st-dialog-actions"><button class="st-button" type="button" data-variant="secondary" data-size="md" commandfor="delete-order" command="close">Cancel</button><form method="dialog"><button class="st-button" type="submit" data-variant="danger" data-size="md">Delete order</button></form></div></dialog></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Menu</h2><div class="st-cluster" data-space="3"><div class="st-menu"><button class="st-button st-menu-button" type="button" data-variant="secondary" data-size="md" popovertarget="order-actions"><span>Actions</span></button><div id="order-actions" class="st-menu-popover" popover="auto"><ul class="st-menu-list" role="list"><li><a class="st-menu-item" href="#edit">Edit</a></li><li><a class="st-menu-item" href="#duplicate">Duplicate</a></li><li class="st-menu-separator" aria-hidden="true"></li><li><form method="get" action="overlays.html"><button type="submit">Archive</button></form></li></ul></div></div><div class="st-menu"><button class="st-button st-menu-button" type="button" data-variant="ghost" data-size="md" popovertarget="menu-1"><span>More</span></button><div id="menu-1" class="st-menu-popover" popover="auto"><ul class="st-menu-list" role="list"><li><a class="st-menu-item" href="#csv">Export as CSV</a></li><li><a class="st-menu-item" href="#print">Print</a></li></ul></div></div></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Tooltip</h2><div class="st-cluster" data-space="3"><span class="st-tooltip-anchor"><button class="st-button" type="button" data-variant="ghost" data-size="md" data-icon-only aria-label="Edit"><svg class="st-icon" viewBox="0 0 24 24" width="1em" height="1em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false"><path d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z" /><path d="m15 5 4 4" /></svg></button><span class="st-tooltip" aria-hidden="true">Edit</span></span><span class="st-tooltip-anchor"><button class="st-button" type="button" data-variant="secondary" data-size="md" data-icon-only aria-label="Duplicate"><svg class="st-icon" viewBox="0 0 24 24" width="1em" height="1em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false"><rect width="14" height="14" x="8" y="8" rx="2" ry="2" /><path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2" /></svg></button><span class="st-tooltip" aria-hidden="true">Duplicate</span></span><span class="st-tooltip-anchor"><button class="st-button" type="button" data-variant="danger" data-size="md" data-icon-only aria-label="Delete"><svg class="st-icon" viewBox="0 0 24 24" width="1em" height="1em" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false"><path d="M10 11v6" /><path d="M14 11v6" /><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6" /><path d="M3 6h18" /><path d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2" /></svg></button><span class="st-tooltip" aria-hidden="true">Delete</span></span></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Toast</h2><div class="st-stack" data-space="4"><p class="st-text" data-size="md">A status message at the edge of the screen, such as the one in the corner. With script it can be dismissed.</p><div class="st-toast" role="status" data-tone="success"><p class="st-toast-message">Order 1042 saved</p><button class="st-toast-dismiss" type="button" data-st-dismiss="">Dismiss</button></div></div></div></section></div></div></main></body></html>
