gallery/tests/snapshots/snapshots__records.snap
---
source: gallery/tests/snapshots.rs
expression: html
---
<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="theme-color" media="(prefers-color-scheme: light)" content="oklch(99.00% 0.0012 250.00)"><meta name="theme-color" media="(prefers-color-scheme: dark)" content="oklch(16.00% 0.0012 250.00)"><title>Records and feedback — stucco gallery</title><script>try {
  const t = localStorage.getItem("stucco-theme");
  if (t === "light" || t === "dark") document.documentElement.dataset.theme = t;
} catch (_) {}
</script><link rel="stylesheet" href="/_stucco/stucco.HASH.css"></head><body><a class="st-skip-link" href="#main">Skip to main content</a><main id="main"><div class="st-container g-page" data-size="xl"><div class="st-stack" data-space="10"><div class="st-stack" data-space="3"><a class="st-link" href="index.html">← Gallery</a><h1 class="st-heading" data-size="3xl">Records and feedback</h1><p class="st-text" data-size="lg" data-tone="muted">A record's page and what follows a change: notices, badges, properties, history and confirmations.</p></div><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Page header with breadcrumbs and actions</h2><div class="st-page-header"><nav class="st-breadcrumbs" aria-label="Breadcrumb"><ol><li><a href="records.html">Orders</a></li><li><span aria-current="page">Order 1042</span></li></ol></nav><h1 class="st-heading" data-size="3xl">Order 1042</h1><div class="st-page-header-description"><div class="st-cluster" data-space="3"><span class="st-badge" data-tone="success">Paid</span><span>Ada Lovelace · $1,234.50</span></div></div><div class="st-page-header-actions"><div class="st-cluster" data-space="3"><a class="st-button" href="#edit" data-variant="primary" data-size="md">Edit</a><a class="st-button" href="#archive" data-variant="secondary" data-size="md">Archive</a><a class="st-button" href="#delete" data-variant="danger" data-size="md">Delete</a></div></div></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Notices</h2><div class="st-stack" data-space="3"><div class="st-notice" data-tone="success"><div class="st-notice-body"><div class="st-notice-message"><span class="st-sr-only">Success: </span>Order 1042 was saved.</div></div></div><div class="st-notice" data-tone="info"><div class="st-notice-body"><p class="st-notice-title">Archived</p><div class="st-notice-message"><span class="st-sr-only">Information: </span>This order is archived, so it is read-only.</div><div class="st-notice-actions"><a class="st-button" href="#restore" data-variant="secondary" data-size="md">Restore</a></div></div></div><div class="st-notice" data-tone="warning"><div class="st-notice-body"><div class="st-notice-message"><span class="st-sr-only">Warning: </span>Stock for two items is low.</div></div></div><div class="st-notice" data-tone="danger"><div class="st-notice-body"><p class="st-notice-title">Something went wrong</p><div class="st-notice-message"><span class="st-sr-only">Error: </span>The order couldn’t be saved because of a problem on our side. Your changes are still below; try again. If it keeps happening, quote request ID 3f6c2a9e-77d1-4f0b-a0c5-0e1d7c1b2a44-and-a-very-long-suffix-that-must-wrap.</div></div></div></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Status badges</h2><div class="st-cluster" data-space="3"><span class="st-badge" data-tone="default">Draft</span><span class="st-badge" data-tone="warning">Pending</span><span class="st-badge" data-tone="success">Paid</span><span class="st-badge" data-tone="info">Shipped</span><span class="st-badge" data-tone="danger">Refunded</span><span class="st-badge" data-tone="accent">New</span><span class="st-badge" data-tone="muted">Archived</span></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Properties</h2><section class="st-panel" aria-labelledby="panel-1"><div class="st-panel-header"><h2 id="panel-1" class="st-heading" data-size="lg">Details</h2></div><dl class="st-description-list"><div class="st-description-item"><dt>Customer</dt><dd>Ada Lovelace</dd></div><div class="st-description-item"><dt>Status</dt><dd><span class="st-badge" data-tone="success">Paid</span></dd></div><div class="st-description-item"><dt>Total</dt><dd>$1,234.50</dd></div><div class="st-description-item"><dt>Order date</dt><dd><time class="st-time" datetime="2026-09-04">2026-09-04</time></dd></div><div class="st-description-item"><dt>Last changed</dt><dd><time class="st-time" datetime="2026-09-30T14:05:00Z">30 Sep 2026, 14:05 <span class="st-time-zone">UTC</span></time></dd></div><div class="st-description-item"><dt>Reference</dt><dd><code>ord_3f6c2a9e77d14f0ba0c50e1d7c1b2a44</code></dd></div><div class="st-description-item"><dt>Coupon</dt><dd>Not set</dd></div><div class="st-description-item"><dt>Note</dt><dd>Deliver to the side entrance; the front door is being replaced. Call ahead if the parcel is larger than a shoebox, and leave it with the neighbours at number 12 otherwise.</dd></div></dl></section></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Activity</h2><div class="st-stack" data-space="6"><section class="st-panel" aria-labelledby="panel-2"><div class="st-panel-header"><h2 id="panel-2" class="st-heading" data-size="lg">Activity</h2></div><ol class="st-activity-list" aria-label="History of order 1042"><li class="st-activity"><p class="st-activity-summary"><span class="st-activity-actor">Grace Hopper</span> edited the order</p><time class="st-time" datetime="2026-09-30T14:05:00Z">30 Sep 2026, 14:05 <span class="st-time-zone">UTC</span></time><details class="st-activity-detail"><summary>Details</summary><div>Changed total, note</div></details></li><li class="st-activity"><p class="st-activity-summary"><span class="st-activity-actor">Ada Lovelace</span> marked the order paid<span class="st-activity-target"> Invoice 88</span></p><time class="st-time" datetime="2026-09-12T08:30:00Z">12 Sep 2026, 08:30 <span class="st-time-zone">UTC</span></time></li><li class="st-activity"><p class="st-activity-summary"><span class="st-activity-actor">Ada Lovelace</span> created the order</p><time class="st-time" datetime="2026-09-04T10:00:00Z">4 Sep 2026, 10:00 <span class="st-time-zone">UTC</span></time></li></ol></section><section class="st-panel" aria-labelledby="panel-3"><div class="st-panel-header"><h2 id="panel-3" class="st-heading" data-size="lg">No activity</h2></div><p class="st-activity-empty">No activity yet.</p></section></div></div></section><section><div class="st-stack" data-space="4"><h2 class="st-heading" data-size="2xl">Confirmation</h2><section class="st-confirmation"><h3 class="st-heading" data-size="xl">Delete order 1042 permanently?</h3><div class="st-confirmation-target">Order 1042 for Ada Lovelace, $1,234.50, Paid</div><div class="st-confirmation-consequences"><p>This will:</p><ul><li>The order and its history are deleted.</li><li>This can't be undone. To hide it but keep its record, archive it instead.</li></ul></div><form class="st-form" method="post" action="#delete"><input type="hidden" name="_csrf" value="demo-token"><div class="st-form-actions"><button class="st-button" type="submit" data-variant="danger" data-size="md">Delete order 1042</button><a class="st-button" href="#order" data-variant="ghost" data-size="md">Cancel</a></div></form></section></div></section></div></div></main></body></html>
